Fixes arrow overlapping text on ie11

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -657,7 +657,7 @@ textarea,
 }
 
 select::-ms-expand {
-	margin-left: 10px;
+	margin-left: 100px;
 }
 
 .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
